--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ asgiref==3.6.0
 backports.zoneinfo==0.2.1
 Brotli==1.0.9
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==40.0.2
+Deprecated==1.2.13
 dj-database-url==1.3.0
 Django==4.2
 django-appconf==1.0.5
@@ -23,6 +26,8 @@ packaging==23.0
 pilkit==2.0
 Pillow==9.5.0
 psycopg2-binary==2.9.6
+pycparser==2.21
+pydantic==1.10.7
 PyJWT==2.6.0
 python-decouple==3.8
 pytz==2023.3
@@ -34,4 +39,6 @@ sqlparse==0.4.3
 typing_extensions==4.5.0
 uritemplate==4.1.1
 urllib3==1.26.15
+vonage==3.3.0
 whitenoise==6.2.0
+wrapt==1.15.0
