--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dj-database-url==1.3.0
 Django==4.2
 django-appconf==1.0.5
 django-cors-headers==3.14.0
+django-filter==23.1
 django-imagekit==4.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
